# robokit_mv_description

./: CMakeLists.txt  README.md  package.xml  yaml_to_ros.py
config/: joint_names.yaml
launch/: aruco_detect.launch  display.launch  gazebo.launch  webots.launch
rviz/: model.rviz
urdf/: robokit_mv.urdf
webots/protos/Robokit-MV/: Robokit1.proto
webots/worlds/: .robocup_training.wbproj
