<package format="2">
  <name>robokit_mv_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Robokit-MV</p>
    <p>This package contains configuration data, 3D models and launch files
for Robokit-MV robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>webots_ros</depend>

  <export>
    <architecture_independent />
  </export>
</package>